[package]
name = "acl_convolution"
version = "0.1.0"
authors = ["rust-lang-ja Developers"]
edition = "2018"
description = "A Rust port of AtCoder Library (ACL)."
license = "CC0-1.0"
repository = "https://github.com/rust-lang-ja/ac-library-rs"
keywords = ["competitive"]
categories = ["algorithms", "data-structures"]
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./katex-header.html"]

[dependencies]
__acl_internal_bit = { package = "acl_internal_bit", version = "0.1.0", path = "../acl_internal_bit" }
__acl_internal_math = { package = "acl_internal_math", version = "0.1.0", path = "../acl_internal_math" }
__acl_modint = { package = "acl_modint", version = "0.1.0", path = "../acl_modint" }

[dev-dependencies]
rand = "0.7.3"
